# learning

./: .gitignore  CLAUDE.md  README.md  generate_comet_issues.py  pyproject.toml
.claude/: settings.json
docs/: comet_expressions_pipeline.md  sample_github_issue.md
prompts/: README.md
prompts/implementation/: comet-expression.md  upstream-spark-expression.md
prompts/issues/: comet-issue.md
prompts/pr-review/: comet-pr-review.md  datafusion-pr-review.md
prompts/reference/: spark-expression-reference.md
scripts/: build_index.py  docs-build.sh  docs-serve.sh  generate_spark_reference.py  query.py
sparkreference/: README.md  docs-requirements.txt  mkdocs.yml  publish.py
sparkreference/docs/: index.md
sparkreference/expressions/: apply_function_expression.md  base_grouping_sets.md  bitmap_bucket_number.md  bitwise_and.md  bitwise_count.md  bitwise_get.md  bitwise_not.md  bitwise_or.md  collation_key.md  create_array.md  csv_to_structs.md  direct_shuffle_partition_id.md  dynamic_pruning_subquery.md  ewm.md  extract_interval_part.md  from_protobuf.md  get_struct_field.md  grouping.md  grouping_id.md  hll_sketch_estimate.md  index.md  input_file_block_length.md  input_file_block_start.md  input_file_name.md  interpreted_predicate.md  make_dt_interval.md  make_ym_interval.md  monotonically_increasing_id.md  multiply_dt_interval.md  named_argument_expression.md  nth_value.md  null_index.md  outer_reference.md  pipe_expression.md  python_udf.md  scala_udf.md  semi_structured_extract.md  size.md  sort_order.md  (+18 more)
src/: __init__.py  chunker.py  indexer.py  query.py
(+432 files in other folders)
