[project]
name = "learning"
version = "0.1.0"
description = "ML experiments for query cost models and code understanding"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
transformers = [
    "transformers>=4.36.0",
    "datasets>=2.16.0",
    "accelerate>=0.25.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
